# highlight-summarize

./: .gitattributes  .gitignore  .lfsconfig  LICENSE  README.md  compare.py  data-analysis.ipynb  demo-requirements.txt  examples.ipynb  experiments.ipynb  experiments.yaml  pyproject.toml  qa-extractor-finetune.py  requirements.txt  run.sh  run_experiments.py  security-analysis.ipynb
.github/workflows/: main_highlight-summarize.yml
demo/: about.py  run.sh  utils.py  👋 About.py
demo/.streamlit/: config.toml
demo/contents/: about.md  highlight_summarize.txt
demo/pages/: 1_💬_Chat.py  demo.py
highlight_summarize/: __init__.py  comparison_judge.py  data.py  hs.py  judges.py  qa.py  threads.py  utils.py
proofs/: Proofs.lean  README.md  lake-manifest.json  lakefile.toml
reproduce/: README.md  compare.py  data-analysis.ipynb  examples.ipynb  experiments.ipynb  experiments.yaml  qa-extractor-finetune.py  results-to-csv.py  results-to-parquet.py  run_experiments.py  security-analysis.ipynb  utils.py
reproduce/results/bioasq/: bioasq_results_processed.csv  bioasq_results_processed.parquet  comparison-HSBERTExtractor-deepset_deberta-v3-base-squad2-gpt-4.1-mini_vs_HSBERTExtractor-models_microsoft-deberta-v3-base-repliqa-gpt-4.1-mini.jsonl  comparison-HSBERTExtractor-deepset_deberta-v3-base-squad2-gpt-4.1-mini_vs_HSBaseline-gpt-4.1-mini-gpt-4.1-mini.jsonl  comparison-HSBERTExtractor-deepset_deberta-v3-base-squad2-gpt-4.1-mini_vs_HSTwoStepsHighlighter-gpt-4.1-mini-gpt-4.1-mini.jsonl  comparison-HSBERTExtractor-models_microsoft-deberta-v3-base-repliqa-gpt-4.1-mini_vs_HSTwoStepsHighlighter-gpt-4.1-mini-gpt-4.1-mini.jsonl  comparison-HSBaseline-gpt-4.1-mini-gpt-4.1-mini-highlighter_vs_hs.jsonl  comparison-HSBaseline-gpt-4.1-mini-gpt-4.1-mini_vs_HSBERTExtractor-models_microsoft-deberta-v3-base-repliqa-gpt-4.1-mini.jsonl  comparison-HSBaseline-gpt-4.1-mini-gpt-4.1-mini_vs_HSTwoStepsHighlighter-gpt-4.1-mini-gpt-4.1-mini.jsonl  comparison-HSSpanHighlighter-gpt-4.1-mini-gpt-4.1-mini_vs_HSBERTExtractor-deepset_deberta-v3-base-squad2-gpt-4.1-mini.jsonl  comparison-HSSpanHighlighter-gpt-4.1-mini-gpt-4.1-mini_vs_HSBERTExtractor-models_microsoft-deberta-v3-base-repliqa-gpt-4.1-mini.jsonl  comparison-HSSpanHighlighter-gpt-4.1-mini-gpt-4.1-mini_vs_HSBaseline-gpt-4.1-mini-gpt-4.1-mini.jsonl  comparison-HSSpanHighlighter-gpt-4.1-mini-gpt-4.1-mini_vs_HSTwoStepsHighlighter-gpt-4.1-mini-gpt-4.1-mini.jsonl  comparison-HSStructuredHighlighter-gpt-4.1-mini-gpt-4.1-mini-highlighter_vs_hs.jsonl  comparison-HSStructuredHighlighter-gpt-4.1-mini-gpt-4.1-mini_vs_HSBERTExtractor-deepset_deberta-v3-base-squad2-gpt-4.1-mini.jsonl  comparison-HSStructuredHighlighter-gpt-4.1-mini-gpt-4.1-mini_vs_HSBaseline-gpt-4.1-mini-gpt-4.1-mini.jsonl  (+11 more)
src/: comparison_judge.py  data.py  hs.py  judges.py  qa.py  threads.py  utils.py
(+43 files in other folders)
